@startuml clean architecture

skin rose
skinparam Nodesep 50 // horizontal spacing
' skinparam ranksep 20 // vertical spacing

skinparam ClassStereotypeFontColor blue
' scale max 4000 width
hide empty members
' top to bottom direction

title Trafic control system:Clean Architecture


package TrafficControl <<Folder>> {

    class          ManageTrafficService
    interface      HandleMessageUseCase <<Input Port>>
    class          HandleMessageJavaAdapter <<Adapter>>
    interface      SendCommandTrafficLightPort <<Output Port>>
    together {
        class          SendCommandTrafficLightJavaAdapter <<Adapter>>
        ' class          SendCommandTrafficLightSocketAdapter <<Adapter>>
    }

    HandleMessageJavaAdapter ..> HandleMessageUseCase
    HandleMessageUseCase <|.. ManageTrafficService
    ManageTrafficService ..> SendCommandTrafficLightPort
    SendCommandTrafficLightPort <|.. SendCommandTrafficLightJavaAdapter
    ' SendCommandTrafficLightPort <|. SendCommandTrafficLightSocketAdapter

}

package TrafficLight <<Folder>> {

    class          ExecuteTrafficLightCommandService
    interface      ExecuteTrafficLightCommandUseCase <<Input Port>>
    class          ExecuteTrafficLightCommandJavaAdapter <<Adapter>>
    interface      SendMessagePort <<Output Port>>
    class          SendMessageJavaAdapter <<Adapter>>
    class          TrafficLight

    ExecuteTrafficLightCommandJavaAdapter ..> ExecuteTrafficLightCommandUseCase
    ExecuteTrafficLightCommandUseCase <|.. ExecuteTrafficLightCommandService
    ExecuteTrafficLightCommandService ..> SendMessagePort
    SendMessagePort <|.. SendMessageJavaAdapter
    ExecuteTrafficLightCommandService .l.> TrafficLight

}



TrafficControl.SendCommandTrafficLightJavaAdapter .r.> TrafficLight.ExecuteTrafficLightCommandJavaAdapter
TrafficControl.HandleMessageJavaAdapter <.l. TrafficLight.SendMessageJavaAdapter

' start for layout purposes
TrafficControl .left[hidden].> TrafficLight
' end layout purposes

@enduml